--- a/hci-project/index.html
+++ b/hci-project/index.html
@@ -3,9 +3,10 @@
 <html lang="en">
 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg" /> -->
+    <link rel="icon" href="/game-controller-joystick-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Jing Game</title>
 
 <body>
 <div id="root"></div>
