--- a/hci-project/index.html
+++ b/hci-project/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg" /> -->
     <link rel="icon" href="/game-controller-joystick-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jing Game</title>
+    <title>J Game</title>
 
 <body>
 <div id="root"></div>
